# HelpfulLens

./: .gitattributes  .gitignore  EDA.ipynb  LICENSE  MLproject  README.md  conda.yaml  datasets  pyproject.toml  requirements.txt
artifacts/20251214_010535_b35a/: model.joblib  model_report.md
data/: README.md
data/cleaned/: README.md
data/datasets/: README.md
data/enriched/: README.md
data/features/: README.md
data/predictions/: README.md
data/raw/: README.md
final_report/: eda_appendix.aux  eda_appendix.fdb_latexmk  eda_appendix.fls  eda_appendix.out  eda_appendix.tex  eda_refined_section.tex  latex_skeleton_team.aux  latex_skeleton_team.fdb_latexmk  latex_skeleton_team.fls  latex_skeleton_team.out  latex_skeleton_team.tex  latex_skeleton_team.toc
models/registry/: README.md  dummy_model_v0.json
notebooks/: 00_ingestion.ipynb  01_eda.ipynb  02_feature_engineering.ipynb  03_model_experiments.ipynb  sentiment_analysis_explo.ipynb  sentiment_featuring.ipynb  target_design.ipynb
reports/eda/: eda_summary.md
reports/eda_refined/: eda_refined_summary.md
scripts/: data_check.py  distilbert_sentiment_subset.py  eda.py  eda_full.py  eda_refined.py  experiment_sweep.py  feature_engineering_sentiment.py  inspect_parquet.py  run_data_pipeline.sh  run_evaluation.sh  run_training.sh
src/: __init__.py
src/config/: config.yaml
src/data/: clean_yelp.py  ingest_raw.py  load_raw.py  make_dataset.py
src/eda/: __init__.py  utils.py
src/features/: build_features.py  sentiment_features.py  sentiment_subset.py
src/models/: evaluate.py  train.py  (+1 more)
(+6 files in other folders)
