[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpfullens"           # arbitrary distribution name
version = "0.1.0"
description = "Yelp review usefulness prediction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    # add anything else you know you'll use, e.g.:
    # "scikit-learn",
    # "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]