[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpfullens"
version = "0.1.0"
description = "Yelp review usefulness prediction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "pyyaml",
    "pyarrow",
    "nbstripout",
    "vaderSentiment",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
